1. Метод .of [#70623 #209458]