@@ -10,7 +10,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -18,21 +18,21 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
     @Test
     public void whenMissed1() {
         List<String> input = Arrays.asList("k2/sk1");
-        List<String> expect = Arrays.asList("k2", "k2/sk1");
+        List<String> expect = List.of("k2", "k2/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
     @Test
     public void whenNonChange1() {
         List<String> input = Arrays.asList("k2", "k2/sk1");
-        List<String> expect = Arrays.asList("k2", "k2/sk1");
+        List<String> expect = List.of("k2", "k2/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
